plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.0.0-beta17'
}

group = 'org.stellarvan'
version = '1.1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.10-R0.1-SNAPSHOT'
    compileOnly 'me.clip:placeholderapi:2.11.6'
    implementation 'org.xerial:sqlite-jdbc:3.53.1.0'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release.set(21)
}

processResources {
    filteringCharset = 'UTF-8'
    filesMatching('plugin.yml') {
        expand(
            version: project.version
        )
    }
}

shadowJar {
    archiveClassifier.set('')
}

build {
    dependsOn shadowJar
}
